--- a/app/design/frontend/base/default/template/eav/widget/form/element/region.phtml
+++ b/app/design/frontend/base/default/template/eav/widget/form/element/region.phtml
@@ -8,6 +8,8 @@
  * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
+
+/** @var Mage_Eav_Block_Widget_Form_Element_Region $this */
 ?>
 <label for="<?= $this->getFieldId()?>_id" class="<?= $this->getLabelClass() ?>"><em>*</em><?= $this->getLabel() ?></label>
 <div class="input-box">
