--- a/app/design/adminhtml/default/default/template/eav/attribute/set/edit/tree/group.phtml
+++ b/app/design/adminhtml/default/default/template/eav/attribute/set/edit/tree/group.phtml
@@ -9,5 +9,7 @@
  * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
+
+/** @var Mage_Eav_Block_Adminhtml_Attribute_Set_Edit_Tree_Group $this */
 ?>
 <div id="tree-div1" style="width:320px;height:500px;margin-top:5px;overflow:auto"></div>
