--- a/app/design/frontend/base/default/template/eav/widget/form.phtml
+++ b/app/design/frontend/base/default/template/eav/widget/form.phtml
@@ -8,5 +8,7 @@
  * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
+
+/** @var Mage_Eav_Block_Widget_Form $this */
 ?>
 <?= $this->getChildHtml() ?>
