--- a/app/design/frontend/base/default/template/eav/widget/form/element/fieldset.phtml
+++ b/app/design/frontend/base/default/template/eav/widget/form/element/fieldset.phtml
@@ -8,18 +8,20 @@
  * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
+
+/** @var Mage_Eav_Block_Widget_Form_Element_Fieldset $this */
 ?>
-<?php $_wrapperTags = $this->getWrapperTags() ?>
+<?php $wrapperTags = $this->getWrapperTags() ?>
 <div class="fieldset">
     <h2 class="legend"><?= $this->__($this->getLabel()) ?></h2>
 <?php if ($this->getIsRequired()): ?>
     <p class="required"><?= $this->__('* Required Fields') ?></p>
 <?php endif ?>
-    <?= $_wrapperTags[0][0] . "\n" ?>
+    <?= $wrapperTags[0][0] . "\n" ?>
 <?php foreach ($this->getChild() as $child): ?>
-    <?= $_wrapperTags[1][0] . "\n" ?>
+    <?= $wrapperTags[1][0] . "\n" ?>
         <?= $child->toHtml() ?>
-    <?= $_wrapperTags[1][1] . "\n" ?>
+    <?= $wrapperTags[1][1] . "\n" ?>
 <?php endforeach ?>
-    <?= $_wrapperTags[0][1] . "\n" ?>
+    <?= $wrapperTags[0][1] . "\n" ?>
 </div>
