--- a/app/design/frontend/base/default/template/eav/widget/form/element/multiline.phtml
+++ b/app/design/frontend/base/default/template/eav/widget/form/element/multiline.phtml
@@ -8,12 +8,14 @@
  * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
+
+/** @var Mage_Eav_Block_Widget_Form_Element_Multiline $this */
 ?>
-<?php foreach ($this->getFields() as $_field): ?>
+<?php foreach ($this->getFields() as $field): ?>
 <div class="field">
-    <label for="<?= $_field->getFieldId()?>" class="<?= $_field->getLabelClass() ?>"><?= $_field->getLabel() ?></label>
+    <label for="<?= $field->getFieldId()?>" class="<?= $field->getLabelClass() ?>"><?= $field->getLabel() ?></label>
     <div class="input-box">
-        <input type="text" id="<?= $_field->getFieldId()?>" name="<?= $_field->getFieldName()?>" value="<?= $this->escapeHtml($_field->getValue())?>" title="<?= $this->quoteEscape($_field->getLabel()) ?>" class="input-text <?= $_field->getClass() ?>" <?= $this->getFieldParams() ?> />
+        <input type="text" id="<?= $field->getFieldId()?>" name="<?= $field->getFieldName()?>" value="<?= $this->escapeHtml($field->getValue())?>" title="<?= $this->quoteEscape($field->getLabel()) ?>" class="input-text <?= $field->getClass() ?>" <?= $this->getFieldParams() ?> />
     </div>
 </div>
 <?php endforeach ?>
