Removed prototypejs from checkout/onepage/review/info.phtml

--- a/app/design/frontend/base/default/template/checkout/onepage/review/info.phtml
+++ b/app/design/frontend/base/default/template/checkout/onepage/review/info.phtml
@@ -58,8 +58,10 @@
         </span>
     </div>
     <script type="text/javascript">
-    //<![CDATA[
-        review = new Review('<?= $this->getUrl('checkout/onepage/saveOrder') ?>', '<?= $this->getUrl('checkout/onepage/success') ?>', $('checkout-agreements'));
-    //]]>
+        review = new Review(
+            '<?= $this->getUrl('checkout/onepage/saveOrder') ?>',
+            '<?= $this->getUrl('checkout/onepage/success') ?>',
+            document.getElementById('checkout-agreements')
+        );
     </script>
 </div>
