--- a/app/design/frontend/base/default/template/catalog/product/view/options/type/file.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/view/options/type/file.phtml
@@ -22,26 +22,25 @@
 <?php $_rand = rand(); ?>
 
 <script type="text/javascript">
-//<![CDATA[
     opFile<?= $_rand ?> = {
         initializeFile: function(inputBox) {
-            this.inputFile = inputBox.select('input[name="<?= $_fileName ?>"]')[0];
-            this.inputFileAction = inputBox.select('input[name="<?= $_fieldNameAction ?>"]')[0];
-            this.fileNameBox = inputBox.up('dd').select('.<?= $_fileNamed ?>')[0];
+            this.inputFile = inputBox.querySelector('input[name="<?= $_fileName ?>"]');
+            this.inputFileAction = inputBox.querySelector('input[name="<?= $_fieldNameAction ?>"]');
+            this.fileNameBox = inputBox.closest('dd').querySelector('.<?= $_fileNamed ?>');
         },
 
         toggleFileChange: function(inputBox) {
             this.initializeFile(inputBox);
-            inputBox.toggle();
+            inputBox.style.display = inputBox.style.display === 'none' ? 'block' : 'none';
             this.fileChangeFlag = this.fileChangeFlag ? false : true;
             if (!this.fileDeleteFlag) {
                 if (this.fileChangeFlag) {
-                     this.inputFileAction.value = 'save_new';
-                     this.inputFile.disabled = false;
-                 } else {
-                     this.inputFileAction.value = 'save_old';
-                     this.inputFile.disabled = true;
-                 }
+                    this.inputFileAction.value = 'save_new';
+                    this.inputFile.disabled = false;
+                } else {
+                    this.inputFileAction.value = 'save_old';
+                    this.inputFile.disabled = true;
+                }
             }
         },
 
@@ -51,15 +50,14 @@
             if (this.fileDeleteFlag) {
                 this.inputFileAction.value = '';
                 this.inputFile.disabled = true;
-                this.fileNameBox.setStyle({'text-decoration': 'line-through'});
+                this.fileNameBox.style.textDecoration = 'line-through';
             } else {
                 this.inputFileAction.value = this.fileChangeFlag ? 'save_new' : 'save_old';
                 this.inputFile.disabled = (this.fileChangeFlag == 'save_old');
-                this.fileNameBox.setStyle({'text-decoration': 'none'});
+                this.fileNameBox.style.textDecoration = 'none';
             }
         }
     };
-//]]>
 </script>
 
 <dt><label <?php if ($_option->getIsRequire()) echo ' class="required"' ?>><?php if ($_option->getIsRequire()) echo '<em>*</em>' ?><?=  $this->escapeHtml($_option->getTitle()) ?></label>
