--- a/app/design/adminhtml/default/default/template/tax/toolbar/rate/add.phtml
+++ b/app/design/adminhtml/default/default/template/tax/toolbar/rate/add.phtml
@@ -9,6 +9,11 @@
  * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
+
+/**
+ * @var Mage_Adminhtml_Block_Tax_Rate_Toolbar_Add $this
+ * @var string $header
+ */
 ?>
 <div class="content-header">
     <table cellspacing="0">
