--- a/app/design/frontend/rwd/default/template/catalog/product/list/related.phtml
+++ b/app/design/frontend/rwd/default/template/catalog/product/list/related.phtml
@@ -9,6 +9,8 @@
  * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
+
+/** @var Mage_Catalog_Block_Product_List_Related $this */
 ?>
 <?php if($this->getItems()->getSize()): ?>
 <div class="block block-related">
