--- a/app/design/frontend/rwd/default/template/checkout/onepage/progress.phtml
+++ b/app/design/frontend/rwd/default/template/checkout/onepage/progress.phtml
@@ -9,6 +9,8 @@
  * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
+
+/** @var Mage_Checkout_Block_Onepage_Progress $this */
 ?>
 <div class="block block-progress opc-block-progress<?php if (!$this->isCustomerLoggedIn()/* && !$this->getCheckout()->getStepData('billing', 'is_show')*/): ?> opc-block-progress-step-login<?php endif ?>">
     <div class="block-title">
