--- a/app/design/frontend/base/default/template/paypal/hss/iframe.phtml
+++ b/app/design/frontend/base/default/template/paypal/hss/iframe.phtml
@@ -16,19 +16,18 @@
 </div>
 <iframe id="hss-iframe" style="display:none;" scrolling="no" frameborder="0" border="0" src="<?= $this->getFrameActionUrl() ?>" height="610" width="100%"></iframe>
 <script type="text/javascript">
-//<![CDATA[
-var headers = $$('#' + checkout.accordion.container.readAttribute('id') + ' .section');
-headers.each(function(header) {
-    header.removeClassName('allow');
-});
-$('hss-iframe').observe('load', function(){
-    $('hss-iframe').show();
-    $('iframe-warning').show();
-    checkout.loadWaiting = 'review';
-    checkout.setLoadWaiting(false);
-    if (checkout.accordion.currentSection == 'opc-review') {
-        $('checkout-review-submit').hide();
-    }
-});
-//]]>
+    const headers = document.querySelectorAll('#' + checkout.accordion.container.getAttribute('id') + ' .section');
+    headers.forEach(header => {
+        header.classList.remove('allow');
+    });
+
+    document.getElementById('hss-iframe').addEventListener('load', function() {
+        document.getElementById('hss-iframe').style.display = 'block';
+        document.getElementById('iframe-warning').style.display = 'block';
+        checkout.loadWaiting = 'review';
+        checkout.setLoadWaiting(false);
+        if (checkout.accordion.currentSection == 'opc-review') {
+            document.getElementById('checkout-review-submit').style.display = 'none';
+        }
+    });
 </script>
